--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "testbot for messenger",
   "main": "index.js",
   "scripts": {
-    "test": "testbot"
+    "test": "echo \"Error: no test specified\" && exit 1",
 	"start": "node index.js"
   },
   "repository": {
